# android_live555_rtsp_client

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rtsp/poe/rtsplive555/: SecondActivity.java
app/src/main/res/layout/: activity_second.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rtsp/poe/rtsplive555/: ExampleUnitTest.kt
live555_rtsp_player/: CMakeLists.txt  build.gradle
live555_rtsp_player/src/androidTest/java/com/rtsp/poe/rtsplive555/: ExampleInstrumentedTest.kt
live555_rtsp_player/src/main/: AndroidManifest.xml
live555_rtsp_player/src/main/cpp/: RTSPClient.cpp  testRTSPClient.cpp
live555_rtsp_player/src/main/cpp/base64/: Base64.cpp  Base64.h  strDup.cpp
live555_rtsp_player/src/main/java/com/rtsp/poe/rtsplive555/: PreviewPresenter.java  PreviewView.java  RTSPClient.java
live555_rtsp_player/src/main/java/org/easydarwin/blogdemos/: H264Decoder.java
live555_rtsp_player/src/main/res/layout/: activity_second.xml
